.metadata/.plugins/org.eclipse.cdt.ui/1504.build.log
20:12:22 **** Build of configuration Debug for project 1504 ****
make all 
Building file: ../src/1504.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/1504.d" -MT"src/1504.o" -o "src/1504.o" "../src/1504.cpp"
../src/1504.cpp:10:19: error: a space is required between consecutive right angle brackets (use '> >')
vector<pair<ll, ll>> edge[801];
                  ^~
                  > >
../src/1504.cpp:13:31: error: a space is required between consecutive right angle brackets (use '> >')
    priority_queue<pair<ll, ll>> qu;
                              ^~
                              > >
2 errors generated.
make: *** [src/1504.o] Error 1

20:12:23 Build Finished (took 463ms)

